--- a/config.yaml
+++ b/config.yaml
@@ -9,4 +9,4 @@ NIrelandpath : './Data/Northern Ireland_Covid.csv'
 Scotlandpath : './Data/Scotland_Covid.csv'
 Walespath : './Data/Wales_Covid.csv'
 poppath : './Data/ukpop.xls'
-UK_geojson : './Data/uk_regions.geojson'
+UK_geojson : './Data/Regions_(December_2021)_EN_BFC.geojson'
